# aoc2024

./: .gitignore  Cargo.toml
benches/: day16.rs
src/: d3.rs  d4.rs  main.rs  utils.rs
