[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
env_logger = "0.11.6"
itertools = "0.14.0"
regex = "1.11.1"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "d3"
path = "src/d3.rs"

[[bin]]
name = "d4"
path = "src/d4.rs"

[[bin]]
name = "d5"
path = "src/d5.rs"

