[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.15"
pest_debugger = "2.7.14"
pest_derive = "2.7.15"
eframe = "0.30.0"
egui = "0.30.0"
env_logger = "0.11.6"
itertools = "0.14.0"
regex = "1.11.1"
serde_xml = "0.9.1"
serde = "1.0.219"
random_color = "1.0.0"

[lib]
name = "utils"
path = "src/utils.rs"

