[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.15"
pest_debugger = "2.7.14"
pest_derive = "2.7.15"
env_logger = "0.11.6"
itertools = "0.14.0"
regex = "1.11.1"
serde_xml = "0.9.1"
serde = "1.0.219"
random_color = "1.0.0"
num-rational = "0.4.2"
raylib = "5.5.1"
rayon = "1.10.0"
owo-colors = "4.2.1"
const-random = "0.1.18"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.6.0"


[lib]
name = "utils"
path = "src/utils.rs"

[[bench]]
name = "day16"
harness = false

[profile.release]
debug = true


